Fixed header size on tablets and phone.

--- a/src/scss/styles_modern.scss
+++ b/src/scss/styles_modern.scss
@@ -114,7 +114,7 @@ header.cribbage-header {
 	//background-repeat: no-repeat;
 	margin: 0 0 4px 0;
 	max-width: 396px;
-	height: 62px;
+	height: 100px;
 	text-align: center;
 	position: relative;
 }
@@ -288,7 +288,7 @@ section.cribbage-result {
 		// background-image: url("./../images/cribbage_header_medium.jpg");
 		// background-repeat: no-repeat;
 		max-width: 640px;
-		height: 84px;
+		height: 110px;
 		text-align: center;
 		padding: 8px 0;
 		position: relative;
@@ -380,7 +380,7 @@ section.cribbage-result {
 		// background-image: url("./../images/cribbage_header_large.jpg");
 		// background-repeat: no-repeat;
 		max-width: 820px;
-		height: 108px;
+		height:160px;
 		text-align: center;
 		padding: 10px 0;
 		position: relative;
